[gd_scene load_steps=65 format=2]

[ext_resource path="res://main/world/character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/world/character/player/states/player_run.gd" type="Script" id=2]
[ext_resource path="res://main/world/character/player/states/player_idle.gd" type="Script" id=3]
[ext_resource path="res://main/world/character/player/sprites/player_arm_mr_spritesheet.png" type="Texture" id=4]
[ext_resource path="res://main/world/character/player/sprites/player_body_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://main/world/character/player/sprites/player_arm_ml_spritesheet.png" type="Texture" id=6]
[ext_resource path="res://main/world/character/player/player.gd" type="Script" id=7]
[ext_resource path="res://main/world/character/player/states/player_air.gd" type="Script" id=8]
[ext_resource path="res://main/world/character/player/drag_camera.gd" type="Script" id=9]
[ext_resource path="res://main/world/random_sound_spawner/random_sound_spawner.gd" type="Script" id=10]
[ext_resource path="res://main/world/character/player/sounds/metal_jump1.wav" type="AudioStream" id=11]
[ext_resource path="res://main/world/character/player/sounds/metal_step2.wav" type="AudioStream" id=12]
[ext_resource path="res://main/world/character/player/sounds/metal_step4.wav" type="AudioStream" id=13]
[ext_resource path="res://main/world/character/player/sounds/metal_step3.wav" type="AudioStream" id=14]
[ext_resource path="res://main/world/character/player/sounds/metal_step1.wav" type="AudioStream" id=15]
[ext_resource path="res://main/world/character/player/sounds/metal_fall1.wav" type="AudioStream" id=16]
[ext_resource path="res://main/world/character/player/sounds/metal_fall2.wav" type="AudioStream" id=17]
[ext_resource path="res://main/world/character/Shadow.tscn" type="PackedScene" id=18]
[ext_resource path="res://main/world/projectile/bullet/orb_bullet/sprites/orb.png" type="Texture" id=19]
[ext_resource path="res://main/world/character/player/sprites/player_arm_shot_spritesheet.png" type="Texture" id=20]
[ext_resource path="res://main/world/character/player/sounds/primary_shot.wav" type="AudioStream" id=21]
[ext_resource path="res://main/world/projectile/bullet/player_bullet/PlayerBullet.tscn" type="PackedScene" id=22]
[ext_resource path="res://main/world/character/player/sprites/player_electricity_hurt.png" type="Texture" id=23]
[ext_resource path="res://main/world/character/enemy/sounds/hurt.wav" type="AudioStream" id=24]
[ext_resource path="res://main/world/character/player/sprites/death_effect/DeathEffect.tscn" type="PackedScene" id=25]
[ext_resource path="res://main/world/character/player/sounds/player_death.wav" type="AudioStream" id=26]

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 8, 10 )

[sub_resource type="Gradient" id=16]
offsets = PoolRealArray( 0, 0.839779 )
colors = PoolColorArray( 1.5, 1.25, 2, 1, 0.690196, 0.384314, 0.972549, 0.0588235 )

[sub_resource type="Animation" id=41]
length = 0.315
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmMR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045, 0.09, 0.135, 0.18, 0.225, 0.27, 0.315 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 16, 17, 18, 19, 20, 21, 22, 22 ]
}

[sub_resource type="Animation" id=20]
length = 0.045
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmMR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 7, 7 ]
}

[sub_resource type="Animation" id=28]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmMR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 7, 8, 8 ]
}

[sub_resource type="Animation" id=1]
length = 0.075
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmMR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6, 6 ]
}

[sub_resource type="Animation" id=9]
length = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmMR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 7, 7 ]
}

[sub_resource type="Animation" id=2]
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmMR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 5 ]
}

[sub_resource type="Animation" id=12]
length = 0.24
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmMR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 9, 10, 11, 12, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprites/PrimaryGunEffectMR/PrimaryShotSparksMR:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=22]
length = 0.045
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmMR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 9, 9 ]
}

[sub_resource type="Animation" id=44]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=42]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045, 0.09, 0.135, 0.18, 0.225, 0.27, 0.315 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 16, 17, 18, 19, 20, 21, 22, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprites:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=26]
length = 0.15
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 7, 8, 8 ]
}

[sub_resource type="Animation" id=29]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 7, 8, 8 ]
}

[sub_resource type="Animation" id=3]
length = 0.075
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6, 6 ]
}

[sub_resource type="Animation" id=27]
length = 0.15
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 7, 8, 8 ]
}

[sub_resource type="Animation" id=4]
length = 0.45
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.08, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "run_step"
}, {
"args": [  ],
"method": "run_step"
} ]
}

[sub_resource type="Animation" id=43]
length = 0.315
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmML:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045, 0.09, 0.135, 0.18, 0.225, 0.27, 0.315 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 16, 17, 18, 19, 20, 21, 22, 22 ]
}

[sub_resource type="Animation" id=21]
length = 0.045
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmML:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 7, 7 ]
}

[sub_resource type="Animation" id=30]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmML:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 7, 8, 8 ]
}

[sub_resource type="Animation" id=5]
length = 0.075
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmML:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6, 6 ]
}

[sub_resource type="Animation" id=11]
length = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmML:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 7, 7 ]
}

[sub_resource type="Animation" id=6]
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmML:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 5 ]
}

[sub_resource type="Animation" id=13]
length = 0.24
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmML:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 9, 10, 11, 12, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprites/PrimaryGunEffectML/PrimaryShotSparksML:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=23]
length = 0.045
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/ArmML:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 9, 9 ]
}

[sub_resource type="Animation" id=17]
length = 0.225
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/PrimaryGunEffectML:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045, 0.09, 0.135, 0.18, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprites/PrimaryGunEffectML:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.22 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/PrimaryGunEffectML:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
length = 0.225
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/PrimaryGunEffectMR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.045, 0.09, 0.135, 0.18, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprites/PrimaryGunEffectMR:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.22 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=36]
resource_name = "hurt_complete"
tracks/0/type = "value"
tracks/0/path = NodePath("../HurtEffect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=31]
resource_name = "hurt_initial"
length = 0.44
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../HurtEffect:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.055, 0.11, 0.165, 0.22, 0.275, 0.33, 0.385, 0.44 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../HurtEffect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=38]
resource_name = "death"

[sub_resource type="Animation" id=37]
resource_name = "hurt_initial"
length = 0.3
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.051, 0.103, 0.15, 0.202, 0.255 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( -6.5, 0.5 ), Vector2( 5.5, 0.5 ), Vector2( -3.5, 0.5 ), Vector2( 1.5, 0.5 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprites:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.104, 0.294 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 2, 2, 2, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=34]
resource_name = "hurt"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.443137 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "hurt_complete"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 2, 1.25, 1, 1, 1, 0, 0, 0.0784314 )

[sub_resource type="Gradient" id=39]
offsets = PoolRealArray( 0, 0.165746, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0.953613, 0.953613, 0.953613, 0 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 7, 10 )

[node name="Player" instance=ExtResource( 1 )]
position = Vector2( -1, 0 )
collision_layer = 2
collision/safe_margin = 0.2
script = ExtResource( 7 )
move_speed = 180.0
gravity = 875.0
max_health = 9.0
primary_weapon_delay = 0.165
jump_force = -400.0
jump_tolerance = 0.15
jump_fall = 0.095
fall_effect_distance = 4.0
primary_bullet_scene = ExtResource( 22 )
death_effect_scene = ExtResource( 25 )
death_effect_count = 8
death_fall_delay = 0.15

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 40 )

[node name="Shadow" parent="Sprites" index="0" instance=ExtResource( 18 )]
max_distance = 256.0

[node name="ArmMR" type="Sprite" parent="Sprites" index="1"]
light_mask = 2
texture = ExtResource( 4 )
hframes = 23
frame = 6

[node name="Body" type="Sprite" parent="Sprites" index="2"]
light_mask = 2
texture = ExtResource( 5 )
hframes = 23
frame = 6

[node name="ArmML" type="Sprite" parent="Sprites" index="3"]
light_mask = 2
texture = ExtResource( 6 )
hframes = 23
frame = 6

[node name="PrimaryGunEffectML" type="Sprite" parent="Sprites" index="4"]
visible = false
light_mask = 2
position = Vector2( 3, 0 )
texture = ExtResource( 20 )
hframes = 5
frame = 4

[node name="PrimaryShotSparksML" type="CPUParticles2D" parent="Sprites/PrimaryGunEffectML" index="0"]
position = Vector2( 6.5, -1.5 )
emitting = false
amount = 24
lifetime = 0.19
one_shot = true
speed_scale = 2.0
explosiveness = 0.4
gravity = Vector2( 0, 420 )
initial_velocity = 160.0
color_ramp = SubResource( 16 )

[node name="PrimaryGunEffectMR" type="Sprite" parent="Sprites" index="5"]
visible = false
light_mask = 2
position = Vector2( 11, -4 )
texture = ExtResource( 20 )
hframes = 5
frame = 4

[node name="PrimaryShotSparksMR" type="CPUParticles2D" parent="Sprites/PrimaryGunEffectMR" index="0"]
position = Vector2( 7.5, -0.5 )
amount = 24
lifetime = 0.19
one_shot = true
speed_scale = 2.0
explosiveness = 0.4
gravity = Vector2( 0, 420 )
initial_velocity = 160.0
color_ramp = SubResource( 16 )

[node name="Step" type="Node2D" parent="Sounds" index="0"]
script = ExtResource( 10 )
sounds = [ ExtResource( 15 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 13 ) ]
volume = -2.0

[node name="Fall" type="Node2D" parent="Sounds" index="1"]
script = ExtResource( 10 )
sounds = [ ExtResource( 16 ), ExtResource( 17 ) ]
volume = -2.0

[node name="Jump" type="Node2D" parent="Sounds" index="2"]
script = ExtResource( 10 )
sounds = [ ExtResource( 11 ) ]
volume = -5.0

[node name="PrimaryShot" type="Node2D" parent="Sounds" index="3"]
script = ExtResource( 10 )
sounds = [ ExtResource( 21 ) ]
volume = -10.0
rand_pitch_range = 0.3

[node name="Hurt" type="Node2D" parent="Sounds" index="4"]
script = ExtResource( 10 )
sounds = [ ExtResource( 24 ) ]
volume = -9.0
rand_pitch_range = 0.2

[node name="Death" type="Node2D" parent="Sounds" index="5"]
script = ExtResource( 10 )
sounds = [ ExtResource( 26 ) ]
volume = -12.0

[node name="ArmMR" type="AnimationPlayer" parent="AnimationPlayers" index="0"]
playback_speed = 0.9
anims/death = SubResource( 41 )
anims/fall = SubResource( 20 )
anims/hurt = SubResource( 28 )
anims/idle = SubResource( 1 )
anims/jump = SubResource( 9 )
anims/run = SubResource( 2 )
anims/shoot = SubResource( 12 )
anims/shoot_wait = SubResource( 22 )

[node name="Body" type="AnimationPlayer" parent="AnimationPlayers" index="1"]
playback_speed = 0.9
anims/RESET = SubResource( 44 )
anims/death = SubResource( 42 )
anims/fall = SubResource( 26 )
anims/hurt = SubResource( 29 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 27 )
anims/run = SubResource( 4 )

[node name="ArmML" type="AnimationPlayer" parent="AnimationPlayers" index="2"]
playback_speed = 0.9
anims/death = SubResource( 43 )
anims/fall = SubResource( 21 )
anims/hurt = SubResource( 30 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 11 )
anims/run = SubResource( 6 )
anims/shoot = SubResource( 13 )
anims/shoot_wait = SubResource( 23 )

[node name="PrimaryGunEffectML" type="AnimationPlayer" parent="AnimationPlayers" index="3"]
anims/shoot = SubResource( 17 )

[node name="PrimaryGunEffectMR" type="AnimationPlayer" parent="AnimationPlayers" index="4"]
anims/RESET = SubResource( 19 )
anims/shoot = SubResource( 18 )

[node name="HurtEffect" type="AnimationPlayer" parent="AnimationPlayers" index="5"]
anims/hurt_complete = SubResource( 36 )
anims/hurt_initial = SubResource( 31 )

[node name="HurtInitial" type="AnimationPlayer" parent="AnimationPlayers" index="6"]
anims/death = SubResource( 38 )
anims/hurt_initial = SubResource( 37 )

[node name="HurtLoop" type="AnimationPlayer" parent="AnimationPlayers" index="7"]
anims/RESET = SubResource( 33 )
anims/hurt = SubResource( 34 )
anims/hurt_complete = SubResource( 35 )

[node name="StateMachine" parent="." index="4"]
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 3 )
state_owner_path = NodePath("../..")

[node name="Run" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 2 )
state_owner_path = NodePath("../..")

[node name="Air" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 8 )
state_owner_path = NodePath("../..")

[node name="VisibilityEnabler2D" parent="." index="5"]
pause_animations = false

[node name="PrimaryForcedTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="PrimaryComboTimer" type="Timer" parent="." index="7"]
one_shot = true

[node name="JumpToleranceTimer" type="Timer" parent="." index="8"]
one_shot = true

[node name="JumpFallTimer" type="Timer" parent="." index="9"]
one_shot = true

[node name="HurtInvincibilityTimer" type="Timer" parent="." index="10"]
one_shot = true

[node name="DeathFallTimer" type="Timer" parent="." index="11"]
one_shot = true

[node name="DragCamera" type="Camera2D" parent="." index="12"]
offset = Vector2( 0, -28 )
current = true
script = ExtResource( 9 )
target_path = NodePath("..")
max_drag = 32.0
update_radius = 80

[node name="Tween" type="Tween" parent="DragCamera" index="0"]

[node name="FallingSparks" type="CPUParticles2D" parent="." index="13"]
position = Vector2( 1, 14 )
emitting = false
amount = 16
lifetime = 0.26
one_shot = true
speed_scale = 1.25
explosiveness = 0.52
local_coords = false
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 420 )
initial_velocity = 160.0
initial_velocity_random = 0.44
color_ramp = SubResource( 8 )

[node name="WalkingSparks" type="CPUParticles2D" parent="." index="14"]
position = Vector2( 1, 12 )
emitting = false
amount = 16
lifetime = 0.26
one_shot = true
speed_scale = 1.25
explosiveness = 0.52
local_coords = false
direction = Vector2( 1, -1 )
gravity = Vector2( 0, 420 )
initial_velocity = 160.0
initial_velocity_random = 0.44
color_ramp = SubResource( 8 )

[node name="DeathSparks" type="CPUParticles2D" parent="." index="15"]
emitting = false
amount = 32
one_shot = true
speed_scale = 2.0
texture = ExtResource( 19 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 42 )
initial_velocity = 110.38
tangential_accel = 100.0
tangential_accel_random = 1.0
color_ramp = SubResource( 39 )

[node name="Hitbox" parent="." index="16"]
collision_layer = 2
collision_mask = 48

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 32 )

[node name="HurtEffect" type="Sprite" parent="." index="17"]
visible = false
light_mask = 2
position = Vector2( -1, -3 )
texture = ExtResource( 23 )
hframes = 8
